fix alignment

--- a/src/image/style.scss
+++ b/src/image/style.scss
@@ -3,11 +3,20 @@
     img {
         max-width: 100%;
     }
-    
+
     line-height: 1;
     &.aligncenter {
         width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
     }
+
+    &.alignright {
+        width: fit-content;
+        margin-left: auto;
+    }
+
+
     figcaption {
         margin-bottom: 1em;
         margin-top: 0.5em;
